[gd_scene load_steps=4 format=3 uid="uid://cguslbc6cev8"]

[ext_resource type="Script" path="res://src/levels/start_menu.gd" id="1_77a6u"]
[ext_resource type="PackedScene" uid="uid://bps0uy7stune2" path="res://src/level_assets/bg.tscn" id="2_6vfpp"]

[sub_resource type="LabelSettings" id="LabelSettings_4tctn"]
font_size = 100

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_77a6u")

[node name="BG" parent="." instance=ExtResource("2_6vfpp")]

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -112.0
offset_right = 26.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
text = "Sabine's Lament"
label_settings = SubResource("LabelSettings_4tctn")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../StartButton")
text = "Quit"

[connection signal="focus_entered" from="StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
